--- a/others.html
+++ b/others.html
@@ -677,6 +677,12 @@
                 },
                 {
                     id: "4",
+                    title: "QR Code Generator",
+                    image: "https://blogger.googleusercontent.com/img/a/AVvXsEjHc4nq-eAU404arBlPwK6YB3CSnGdgb0opIXUYGuZkzTq__ucQc387Y_yuWUCjhn7DPmtEIYBQ3Ybmox95hLswMzEv00o-LO6KvKT-uRM6a1DqBX_OyVUJnAOTa6aOOslw9IzEm2KzDtiOYH3H-nyle5SvfQkQYPb_28dxYP7aUAgrNXqbjkiLdjce",
+                    link: "qrcode.html"
+                },
+                {
+                    id: "5",
                     title: "Contact Us",
                     image: "https://blogger.googleusercontent.com/img/a/AVvXsEhf57qe670q3ZE0M-7bigbYLPsjQipuCVxbL7p0yqfs2N_GuciDwqALTWANng131JrLa0ekjyMi1vikOKXIi2_vtCmLUTU0n31hl-cuKtNdlPY4J4kMpVhti609VsiKh9bzkp_yrpmcksYTnUdgdORarmA9B3aWtNpUdvgx44DSIZJdkhKxZzRnJNzE",
                     link: "https://www.iatechzone.xyz/p/contact-us.html"
